# imap-codec

bindings/imap-codec-python/: Cargo.toml  imap_codec.pyi
bindings/imap-codec-python/examples/: parse_command.py  parse_greeting.py  parse_response.py
bindings/imap-codec-python/examples/imap_codec_dummy/: __init__.py
bindings/imap-codec-python/src/: lib.rs
bindings/imap-codec-python/tests/: test_command_encode.py  test_greeting_encode.py  test_response_encode.py
bindings/imap-types-python/: Cargo.toml  imap_types.pyi
bindings/imap-types-python/examples/: create_greeting.py  parse_greeting.py
bindings/imap-types-python/src/: lib.rs
bindings/imap-types-python/tests/: test_types_greeting.py
imap-codec/: Cargo.toml
imap-codec/src/codec/: encode.rs
imap-types/: Cargo.toml
imap-types/src/: auth.rs  body.rs  command.rs  core.rs  fetch.rs  flag.rs  mailbox.rs  response.rs  search.rs  sequence.rs  state.rs  status.rs
imap-types/src/extensions/: binary.rs  compress.rs  enable.rs  metadata.rs  quota.rs  sort.rs  thread.rs  uidplus.rs
